src/objects/Opportunities_With_Contacts_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_country__c</fullName>
        <label>Mailing country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_state_Province__c</fullName>
        <label>Mailing state/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_owner__c</fullName>
        <label>opportunity owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunities With Contacts Snapshot</label>
    <nameField>
        <label>Opportunities With Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities With Contacts Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>